--- a/.hintrc
+++ b/.hintrc
@@ -8,6 +8,27 @@
       {
         "image-alt": "off"
       }
+    ],
+    "axe/forms": [
+      "default",
+      {
+        "label": "off",
+        "select-name": "off"
+      }
+    ],
+    "axe/parsing": [
+      "default",
+      {
+        "duplicate-id-aria": "off"
+      }
+    ],
+    "typescript-config/strict": "off",
+    "axe/aria": [
+      "default",
+      {
+        "aria-allowed-attr": "off",
+        "aria-valid-attr-value": "off"
+      }
     ]
   }
 }
